Fixed justify and margin spacing

--- a/src/modules/tecajevi/dvorana-forms/style.module.css
+++ b/src/modules/tecajevi/dvorana-forms/style.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
-    padding: 0 3rem;
 }
 
 .deck {
@@ -10,11 +9,13 @@
     flex-direction: column;
     align-items: stretch;
     padding-top: 1rem;
-    padding-right: 2rem;
 }
 
 @media screen and (min-width: 1350px){
     .page{
         flex-direction: row;
+    }
+    .deck{
+        margin: 0 1vw;
     }
 }
