--- a/src/modules/tecajevi/tecajevi-forms/style.module.css
+++ b/src/modules/tecajevi/tecajevi-forms/style.module.css
@@ -7,7 +7,6 @@
 .deck {
     display: flex;
     justify-content: space-between;
-    padding: 0px 5rem;
     padding-top: 5rem;
     flex: 2;
 }
@@ -17,13 +16,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 5rem;
     padding-top: 5rem;
 }
 
 @media screen and (min-width: 1780px){
     .page{
         flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .deck{
+        margin-right: 8vw;
     }
 
     .deck2 {
